--- a/timer-controls/package.json
+++ b/timer-controls/package.json
@@ -12,6 +12,7 @@
     "bower": "^1.8.0",
     "elm": "^0.18.0",
     "elm-css": "^0.6.0",
-    "elm-live": "^2.6.2"
+    "elm-live": "^2.6.2",
+    "yarn": "^0.18.1"
   }
 }
