--- a/timer-controls/bower.json
+++ b/timer-controls/bower.json
@@ -2,6 +2,7 @@
   "name": "present.now.sh",
   "dependencies": {
     "font-roboto": "PolymerElements/font-roboto#^1.0.1",
-    "paper-swatch-picker": "PolymerElements/paper-swatch-picker#^1.0.2"
+    "paper-swatch-picker": "PolymerElements/paper-swatch-picker#^1.0.2",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.23"
   }
 }
