--- a/timer-controls/package.json
+++ b/timer-controls/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.8.0",
+    "browserify": "^13.3.0",
     "elm": "^0.18.0",
     "elm-css": "^0.6.0",
     "elm-live": "^2.7.0",
