--- a/timer-controls/package.json
+++ b/timer-controls/package.json
@@ -9,11 +9,9 @@
   "author": "Tomek Wiszniewski <t.wiszniewski@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "bower": "^1.8.0",
     "browserify": "^13.3.0",
     "elm": "^0.18.0",
     "elm-css": "^0.6.0",
-    "elm-live": "^2.7.0",
-    "yarn": "^0.18.1"
+    "elm-live": "^2.7.0"
   }
 }
