--- a/package.json
+++ b/package.json
@@ -1,5 +1,21 @@
 {
+  "name": "timer-controls",
+  "version": "0.0.0",
+  "main": "index.js",
+  "repository": {
+    "url": "tomekwi/present.now.sh",
+    "type": "git"
+  },
+  "author": "Tomek Wiszniewski <t.wiszniewski@gmail.com>",
+  "license": "MIT",
   "devDependencies": {
-    "bower": "^1.8.0"
+    "bower": "^1.8.0",
+    "browserify": "^13.3.0",
+    "elm": "^0.18.0",
+    "elm-css": "^0.6.0",
+    "elm-live": "^2.7.0"
+  },
+  "dependencies": {
+    "private-parts": "^0.4.1"
   }
 }
