--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "bower": "^1.8.0",
     "browserify": "^13.3.0",
+    "budo": "^9.4.1",
     "elm": "^0.18.0",
     "elm-css": "^0.6.0",
     "elm-live": "^2.7.0"
