A basic working <timer-display>

--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "font-roboto": "PolymerElements/font-roboto#^1.0.1",
     "paper-swatch-picker": "PolymerElements/paper-swatch-picker#^1.0.2",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.23"
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.23",
+    "react": "^15.4.2"
   }
 }
