--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.23",
     "react": "^15.4.2",
     "paper-button": "^1.0.14",
-    "iron-icons": "^1.2.0"
+    "iron-icons": "^1.2.0",
+    "paper-icon-button": "^1.1.4"
   }
 }
