--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "budo": "^9.4.1",
     "elm": "^0.18.0",
     "elm-css": "^0.6.0",
-    "elm-live": "^2.7.0"
+    "elm-live": "^2.7.0",
+    "now": "^2.0.2"
   },
   "dependencies": {
     "private-parts": "^0.4.1"
